# quake-tools

./: .clang-format  .gitignore  CMakeLists.txt  README.md
common/: CMakeLists.txt  bspfile.cpp  bspfile.h  cmdlib.cpp  cmdlib.h  lbmlib.cpp  lbmlib.h  mathlib.cpp  mathlib.h  polylib.cpp  polylib.h  scriplib.cpp  scriplib.h  threads.cpp  threads.h  trilib.cpp  trilib.h  wadlib.cpp  wadlib.h
qcc/: CMakeLists.txt  pr_comp.cpp  pr_comp.h  pr_lex.cpp  qcc.cpp  qcc.h
